// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkModels > calls basic and reasoning/tool check for reasoning models 1`] = `
[
  {
    "max_tokens": 16,
    "messages": [
      {
        "content": "Say OK",
        "role": "user",
      },
    ],
    "model": "requesty/reasoning-model",
    "stream": true,
  },
  {
    "messages": [
      {
        "content": "Say OK. Do not call any tools.",
        "role": "user",
      },
    ],
    "model": "requesty/reasoning-model",
    "reasoning_effort": "low",
    "stream": true,
    "tools": [
      {
        "function": {
          "description": "A no-op tool used only to verify tool compatibility during model health checks.",
          "name": "health_check_noop",
          "parameters": {
            "additionalProperties": false,
            "properties": {},
            "type": "object",
          },
        },
        "type": "function",
      },
    ],
  },
]
`;

exports[`checkModels > calls basic completion check once per model 1`] = `
[
  {
    "max_tokens": 16,
    "messages": [
      {
        "content": "Say OK",
        "role": "user",
      },
    ],
    "model": "requesty/model-a",
    "stream": true,
  },
  {
    "max_tokens": 16,
    "messages": [
      {
        "content": "Say OK",
        "role": "user",
      },
    ],
    "model": "requesty/model-b",
    "stream": true,
  },
]
`;

exports[`health summary and log output > formats summaries 1`] = `
{
  "allFailed": "Health check: 0 OK, 2 failed:
- requesty/model-a: first failure
- requesty/model-b: second failure
",
  "allPassed": "Health check: all 2 OK.",
  "partialFailure": "Health check: 1 OK, 1 failed:
- requesty/failing-model: HTTP 500 Internal Server Error
",
}
`;

exports[`health summary and log output > writes added and removed models into the log 1`] = `
"Requesty health check log
Timestamp: <timestamp>
Provider: requesty-export
Base URL: https://router.requesty.ai/v1
Total: 1
Passed: 1
Failed: 0

Added models:
- requesty/model-a
- requesty/model-new
Removed models:
- requesty/model-old

No failed models.
"
`;

exports[`health summary and log output > writes log file including the request URL for each failed model 1`] = `
"Requesty health check log
Timestamp: <timestamp>
Provider: requesty-export
Base URL: https://router.requesty.ai/v1
Total: 3
Passed: 1
Failed: 2

No added models.
No removed models.

Failed models:

Model: requesty/failing-model
Latency: 123ms
URL: https://router.requesty.ai/v1/chat/completions
Error:
HTTP 500 Internal Server Error

---

Model: requesty/failing-model-unknown-error
Latency: 123ms
Error:
Unknown error

---

"
`;

exports[`health summary and log output > writes log file including the stack trace for failed models 1`] = `
"Requesty health check log
Timestamp: <timestamp>
Provider: requesty-export
Base URL: https://router.requesty.ai/v1
Total: 2
Passed: 0
Failed: 2

No added models.
No removed models.

Failed models:

Model: requesty/network-error-model
Latency: 123ms
URL: https://router.requesty.ai/v1/chat/completions
Error:
fetch failed
Stack trace:
Error: fetch failed
    at fetch (node:internal)
    at postChatCompletion

---

Model: requesty/http-error-model
Latency: 123ms
Error:
HTTP 500 Internal Server Error

---

"
`;

exports[`health summary and log output > writes log file without any errors 1`] = `
"Requesty health check log
Timestamp: <timestamp>
Provider: requesty-export
Base URL: https://router.requesty.ai/v1
Total: 2
Passed: 2
Failed: 0

No added models.
No removed models.

No failed models.
"
`;
